[project]
name = "leave-dates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.1",
    "altair>=5.0",
    "icalendar>=6.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "uv>=0.9.11",
]
